...
								  android:layout_width = "wrap_content"
								  android:layout_height = "wrap_content"
								  android:layout_marginTop = "6dp"
								  android:text = "Autore del post"
								  android:textColor = "@color/primary"
								  android:textSize = "22sp"/>
						<Spinner android:id = "@+id/autore_spinner"
								 android:layout_width = "match_parent"
								 android:layout_height = "48dp"
								 android:layout_marginHorizontal = "10dp"
								 android:layout_marginTop = "10dp"
								 android:alpha = "0.75"
								 android:contentDescription = "@string/plesso"
...
								  android:layout_height = "wrap_content"
								  android:layout_marginTop = "20dp"
								  android:text = "@string/plesso"
								  android:textColor = "@color/primary"
								  android:textSize = "22sp"
								  android:visibility = "@{viewModel.latitude!=null?view.GONE:view.VISIBLE}"/>
						<Spinner android:id = "@+id/plesso_spinner"
								 android:layout_width = "match_parent"
								 android:layout_height = "48dp"
								 android:layout_marginHorizontal = "10dp"
								 android:layout_marginTop = "10dp"
								 android:alpha = "0.75"
								 android:contentDescription = "@string/plesso"
...
								  android:layout_height = "wrap_content"
								  android:layout_marginTop = "20dp"
								  android:text = "@string/zona"
								  android:textColor = "@color/primary"
								  android:textSize = "22sp"
								  android:visibility = "@{(viewModel.zone.size()&lt;=1 || viewModel.latitude!=null)?view.GONE:view.VISIBLE}"/>
						<Spinner android:id = "@+id/zona_spinner"
								 android:layout_width = "match_parent"
								 android:layout_height = "48dp"
								 android:layout_marginHorizontal = "10dp"
								 android:layout_marginTop = "10dp"
								 android:alpha = "0.75"
								 android:contentDescription = "@string/zona"
...
									  android:layout_marginStart = "10dp"
									  android:gravity = "center_vertical"
									  android:text = "@{viewModel.currentGender.icon}"
									  android:textColor = "@color/foreground"
									  android:textSize = "26sp"/>

							<Spinner android:id = "@+id/genere_spinner"
									 android:layout_width = "match_parent"
									 android:layout_height = "48dp"
									 android:layout_marginHorizontal = "10dp"
									 android:alpha = "0.75"
									 android:contentDescription = "@string/zona"
									 android:entries = "@{viewModel.genders}"
...
								  android:layout_marginTop = "20dp"
								  android:text = "@string/descrizione"
								  android:textColor = "@color/primary"
								  android:textSize = "22sp"/>

						<EditText
							android:id="@+id/descizione_editText"
							style="@style/LabelRegular"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:alpha="0.75"
							android:autofillHints="name"
							android:gravity="top|start"
...
													   android:foreground = "@drawable/ripple_white_corner_round"
													   android:onClickListener = "@{()->viewModel.azzera()}"
													   android:text = "@string/azzera"
													   android:textColor = "@color/foreground"
													   android:textSize = "16sp"/>

			<androidx.appcompat.widget.AppCompatButton android:id = "@+id/add_post_pubblica_button"
													   android:layout_width = "0dp"
													   android:layout_height = "56dp"
													   android:layout_marginStart = "10dp"
													   android:layout_marginEnd = "30dp"
													   android:layout_weight = "1"
													   android:background = "@drawable/button_selector"
...
