<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android = "http://schemas.android.com/apk/res/android"
		xmlns:app = "http://schemas.android.com/apk/res-auto">
	<data>
		<variable name = "viewModel"
				  type = "it.univpm.spottedkotlin.viewmodel.TagItemAddViewModel"/>
		<variable name = "onClickListener"
				  type = "android.view.View.OnClickListener"/>

	</data>

	<LinearLayout
		android:id="@+id/add_tag"
		android:layout_width = "180dp"
		android:layout_height = "31dp"
		android:background = "@drawable/border_dashed_red_tag"
		android:clickable = "true"
		android:foreground = "@drawable/ripple_red_corner_round"
		android:orientation = "horizontal"
		app:onClickListener = "@{onClickListener}">

		<TextView
			style = "@style/LabelIcon"
			android:layout_width = "match_parent"
			android:layout_height = "match_parent"
			android:fontFamily = "@font/material_design_icons"
			android:gravity = "center"
			android:text = "@string/Plus"
			android:textColor = "@color/red"
			android:textSize = "20sp"/>
	</LinearLayout>
</layout>