...
				<View android:id = "@+id/add_post_circle"
					  android:layout_width = "match_parent"
					  android:layout_height = "match_parent"
					  android:background = "@drawable/border_rounded_white_small"
					  android:visibility = "invisible"/>
				<TextView
					android:id = "@+id/add_post_icon"
					style = "@style/LabelIcon"
					android:layout_width = "match_parent"
					android:layout_height = "match_parent"
					android:gravity = "center"
					android:text = "@string/PlusCircleOutline"
					android:textColor = "@color/white"
...
