<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android = "http://schemas.android.com/apk/res/android"
		xmlns:app = "http://schemas.android.com/apk/res-auto"
		xmlns:tools = "http://schemas.android.com/tools">

	<data>
		<import type = "it.univpm.spottedkotlin.enums.RemoteImages"/>
		<variable name = "viewModel"
				  type = "it.univpm.spottedkotlin.viewmodel.LoginViewModel"/>
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width = "match_parent"
		android:layout_height = "match_parent">

		<androidx.cardview.widget.CardView
			android:id = "@+id/login_card"
			android:layout_width = "match_parent"
			android:layout_height = "0dp"
			android:layout_marginTop = "150dp"
			android:layout_marginBottom = "50dp"
			app:cardBackgroundColor = "@color/inverse"
			app:cardCornerRadius = "26dp"
			app:layout_constraintBottom_toBottomOf = "parent"
			app:layout_constraintEnd_toEndOf = "parent"
			app:layout_constraintStart_toStartOf = "parent"
			app:layout_constraintTop_toTopOf = "parent">

			<ScrollView android:layout_width = "match_parent"
						android:layout_height = "wrap_content">

				<LinearLayout
					android:layout_width = "match_parent"
					android:layout_height = "wrap_content"
					android:orientation = "vertical"
					android:padding = "30dp">

					<!--				<TextView-->
					<!--					style = "@style/LabelBlack"-->
					<!--					android:layout_width = "match_parent"-->
					<!--					android:layout_height = "wrap_content"-->
					<!--					android:text = "@string/login"-->
					<!--					android:textAlignment = "center"/>-->

					<TextView
						style = "@style/LabelBold"
						android:layout_width = "match_parent"
						android:layout_height = "wrap_content"
						android:layout_marginTop = "10dp"
						android:text = "@string/email"
						android:textSize = "16sp"/>

					<EditText
						android:id="@+id/TextEmail"
						style="@style/LabelRegular"
						android:layout_width="match_parent"
						android:layout_height="46dp"
						android:layout_marginTop="10dp"
						android:background="@drawable/text_view_border_grey"
						android:inputType="textEmailAddress"
						android:paddingHorizontal="20dp"
						android:paddingVertical="0dp"
						android:text="@={viewModel.email}"
						android:textCursorDrawable="@drawable/gray_cursor" />

					<TextView
						android:id = "@+id/password"
						style = "@style/LabelBold"
						android:layout_width = "match_parent"
						android:layout_height = "wrap_content"
						android:layout_marginTop = "20dp"
						android:text = "@string/password"
						android:textSize = "16sp"/>

					<EditText
						android:id = "@+id/TextPassword"
						style = "@style/LabelRegular"
						android:layout_width = "match_parent"
						android:layout_height = "46dp"
						android:layout_marginTop = "10dp"
						android:background = "@drawable/text_view_border_grey"
						android:inputType = "textPassword"
						android:paddingHorizontal = "20dp"
						android:paddingVertical = "0dp"
						android:text = "@={viewModel.password}"
						android:textCursorDrawable = "@drawable/gray_cursor"/>

					<TextView
						android:id="@+id/error"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="10dp"
						android:text="" />

					<androidx.appcompat.widget.AppCompatButton android:id = "@+id/login_button"
															   android:layout_width = "match_parent"
															   android:layout_height = "48dp"
															   android:layout_marginTop = "30dp"
															   android:background = "@drawable/button_selector"
															   android:elevation = "10dp"
															   android:fontFamily = "@font/lato_regular"
															   android:foreground = "@drawable/ripple_white_corner_round"
															   android:text = "@string/login"
															   android:textColor = "@drawable/button_text_color_selector"
															   android:textSize = "15sp"/>

					<!--HLine-->
					<View android:layout_width = "match_parent"
						  android:layout_height = "0.65dp"
						  android:layout_marginTop = "20dp"
						  android:alpha = "0.125"
						  android:foreground = "@color/foreground"/>

					<TextView
						style = "@style/LabelRegular"
						android:layout_width = "match_parent"
						android:layout_height = "wrap_content"
						android:layout_marginTop = "20dp"
						android:text = "@string/oppure"
						android:textAlignment = "center"/>

					<Button
						android:id = "@+id/login_google_button"
						android:layout_width = "match_parent"
						android:layout_height = "60dp"
						android:layout_marginTop = "8dp"
						android:backgroundTint = "@color/white"
						app:cornerRadius = "120dp"
						app:icon = "@drawable/google"
						app:iconGravity = "textStart"
						app:iconPadding = "0dp"
						app:iconSize = "35dp"
						app:iconTintMode = "multiply"/>

					<TextView
						style = "@style/LabelRegular"
						android:layout_width = "match_parent"
						android:layout_height = "wrap_content"
						android:layout_marginTop = "16dp"
						android:text = "@string/not_registered"
						android:textAlignment = "center"/>

					<TextView
						android:id = "@+id/register_text"
						style = "@style/LabelBold"
						android:layout_width = "match_parent"
						android:layout_height = "wrap_content"
						android:layout_marginTop = "7dp"
						android:layout_marginBottom = "4dp"
						android:text = "@string/registrati"
						android:textAlignment = "center"
						android:textSize = "18sp"/>

				</LinearLayout>
			</ScrollView>

		</androidx.cardview.widget.CardView>

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
