...
	<string name = "settings_fragment_label">Impostazioni</string>
	<string name = "next">Next</string>
	<string name = "previous">Previous</string>

	<string name = "intro_title">Dai un nome\nai volti che incontri</string>
	<string name = "intro_subtitle">Pubblica annunci e trova\nle persone che stai cercando.</string>
	<string name = "start_button">Iniziamo</string>
	<string name = "app_title">Spotted</string>
	<string name = "login">Login</string>
	<string name = "email">E-mail:</string>
	<string name = "password">Password:</string>
	<string name = "oppure">Oppure</string>
	<string name = "not_registered">Non sei ancora registrato?</string>
...
