...
							  android:layout_height = "match_parent"
							  android:gravity = "center"
							  android:text = "@string/CogOutline"
							  android:textColor = "@color/foreground"
							  android:textSize = "28sp"/>

					<include android:id = "@+id/home_menu"
							 layout = "@layout/highlight_view"
							 android:layout_width = "match_parent"
							 android:layout_height = "match_parent"
							 android:gravity = "center"
							 app:foreground = "@{@drawable/ripple_black_round}">
					</include>
...
