...
    <string name="Linux">&#xf033d;</string>
    <string name="Lock">&#xf033e;</string>
    <string name="LockOpen">&#xf033f;</string>
    <string name="LockOpenOutline">&#xf0340;</string>
    <string name="LockOutline">&#xf0341;</string>
    <string name="Login">&#xf0342;</string>
    <string name="Logout">&#xf0343;</string>
    <string name="Looks">&#xf0344;</string>
    <string name="Loupe">&#xf0345;</string>
    <string name="Lumx">&#xf0346;</string>
    <string name="Magnet">&#xf0347;</string>
    <string name="MagnetOn">&#xf0348;</string>
    <string name="Magnify">&#xf0349;</string>
...
